k8s/app.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    component: api-ingress
spec:
  rules:
  - host: tenants.mycodeonline.com
    http:
      paths:
      - backend:
          serviceName: tenants-svc
          servicePort: 80
  - host: content.mycodeonline.com
    http:
      paths:
      - backend:
          serviceName: content-svc
          servicePort: 80
          
---

apiVersion: v1
kind: Service
metadata:
  name: tenants-svc
  labels:
    component: tenants-svc
spec:
  ports:
    - port: 80
  selector:
    component: tenants-pod

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tenants-deploy-pod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: tenants-pod
    spec:
      containers:
          - name: tenants-con
            image: peterkneale/micro.services.tenants:latest
            imagePullPolicy: Always
            ports:
              - containerPort: 80
                name: api-port
            livenessProbe:
              httpGet:
                path: /health/alive
                port: api-port
            readinessProbe:
              httpGet:
                path: /health/ready
                port: api-port

---
apiVersion: v1
kind: Service
metadata:
  name: content-svc
  labels:
    component: content-svc
spec:
  ports:
    - port: 80
  selector:
    component: content-pod

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: content-deploy-pod
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: content-pod
    spec:
      containers:
          - name: content-con
            image: peterkneale/micro.services.content:latest
            imagePullPolicy: Always
            ports:
              - containerPort: 80
                name: api-port
            livenessProbe:
              httpGet:
                path: /health/alive
                port: api-port
            readinessProbe:
              httpGet:
                path: /health/ready
                port: api-port
